--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                 <img src="img/animate.png" alt="">
             </div>
         </div>
-        <div class="offer">
+        <div class="offer toScroll">
             <div class="container">
-                <h2 class="offer__title title">Наше предложение Бизнесу:</h2>
+                <h2 class="title">Наше предложение Бизнесу:</h2>
                 <div class="offer__items">
                     <div class="item">
                         <img class="item__back" src="img/items/item1.jpg" alt="">
@@ -96,8 +96,8 @@
             </div>
         </div>
         <div class="advantages">
-            <div class="advantages__main container">
-                <h2 class="advantages__title title">Какую выгоду получает клиент и на чем он экономит</h2>
+            <div class="advantages__main toScroll container">
+                <h2 class="title">Какую выгоду получает клиент и на чем он экономит</h2>
                 <div class="advantages__items">
                     <div class="advantages__item">
                         <div class="advantages__item_left"><img src="img/icons/mark.svg" alt=""></div>
@@ -126,8 +126,8 @@
                 <button class="advantages__button button white-button">Отправить заявку</button>
             </div>
         </div>
-        <div class="about">
-            <h2 class="about__title title container">Почему мы?</h2>
+        <div class="about specialScroll">
+            <h2 class="title container">Почему мы?</h2>
             <div class="about__rows">
                 <div class="about__row">
                     <div class="about__content container">
@@ -158,8 +158,8 @@
             </div>
         </div>
         <div class="partners container">
-            <div class="partners__main">
-                <h2 class="partners__title title">Наши партнеры</h2>
+            <div class="partners__main toScroll">
+                <h2 class="title">Наши партнеры</h2>
                 <p class="partners__content">We focus on ergonomics and meeting you where you work. It's only a keystroke away.</p>
                 <div class="partners__icons">
                     <img src="img/partners/logo_apple-app-store.svg" alt="apple-app-store">
