--- a/index.html
+++ b/index.html
@@ -63,20 +63,52 @@
                 <div class="offer__items">
                     <div class="item">
                         <img class="item__back" src="img/items/item1.jpg" alt="">
-                        <h3 class="item__title item__title_hor">Анализ и оптимизация БП</h3>
+                        <h3 class="item__title">Анализ и оптимизация БП</h3>
+                        <div class="mask">
+                            <p class="mask__title">Анализ и оптимизация БП</p>
+                            <ul class="mask__list">
+                                <li>- анализ</li>
+                                <li>- выявление проблемных + точек роста</li>
+                                <li>- оптимизация затрат и поиск наиболее оптимальных маршрутов</li>
+                            </ul>
+                        </div>
                     </div>
                     <div class="item">
                         <img class="item__back" src="img/items/item2.jpg" alt="">
-                        <h3 class="item__title item__title_hor">Управление магистральной и&nbsp;локальной
+                        <h3 class="item__title">Управление магистральной и&nbsp;локальной
                             логистикой</h3>
+                        <div class="mask">
+                            <p class="mask__title">Анализ и оптимизация БП</p>
+                            <ul class="mask__list">
+                                <li>- анализ</li>
+                                <li>- выявление проблемных + точек роста</li>
+                                <li>- оптимизация затрат и поиск наиболее оптимальных маршрутов</li>
+                            </ul>
+                        </div>
                     </div>
                     <div class="item">
                         <img class="item__back" src="img/items/item3.jpg" alt="">
-                        <h3 class="item__title item__title_hor">Управление ассортиментом</h3>
+                        <h3 class="item__title">Управление ассортиментом</h3>
+                        <div class="mask">
+                            <p class="mask__title">Анализ и оптимизация БП</p>
+                            <ul class="mask__list">
+                                <li>- анализ</li>
+                                <li>- выявление проблемных + точек роста</li>
+                                <li>- оптимизация затрат и поиск наиболее оптимальных маршрутов</li>
+                            </ul>
+                        </div>
                     </div>
                     <div class="item">
                         <img class="item__back" src="img/items/item4.jpg" alt="">
-                        <h3 class="item__title item__title_hor">ВЭД и Таможенное оформление</h3>
+                        <h3 class="item__title">ВЭД и Таможенное оформление</h3>
+                        <div class="mask">
+                            <p class="mask__title">Анализ и оптимизация БП</p>
+                            <ul class="mask__list">
+                                <li>- анализ</li>
+                                <li>- выявление проблемных + точек роста</li>
+                                <li>- оптимизация затрат и поиск наиболее оптимальных маршрутов</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
                 <div class="offer__navigation">
