--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
                 <div class="offer__items">
                     <div class="item">
                         <img class="item__back" src="img/items/item1.jpg" alt="">
-                        <h3 class="item__title">Анализ и оптимизация БП</h3>
+                        <h3 class="item__title item__title_hor item__title-visible">Анализ и оптимизация БП</h3>
+                        <h3 class="item__title item__title_ver">Анализ и оптимизация БП</h3>
                         <div class="mask">
                             <p class="mask__title">Анализ и оптимизация БП</p>
                             <ul class="mask__list">
@@ -75,8 +76,8 @@
                     </div>
                     <div class="item">
                         <img class="item__back" src="img/items/item2.jpg" alt="">
-                        <h3 class="item__title">Управление магистральной и&nbsp;локальной
-                            логистикой</h3>
+                        <h3 class="item__title item__title_hor item__title-visible">Управление магистральной и&nbsp;локальной логистикой</h3>
+                        <h3 class="item__title item__title_ver">Управление магистральной и&nbsp;локальной логистикой</h3>
                         <div class="mask">
                             <p class="mask__title">Анализ и оптимизация БП</p>
                             <ul class="mask__list">
@@ -88,7 +89,8 @@
                     </div>
                     <div class="item">
                         <img class="item__back" src="img/items/item3.jpg" alt="">
-                        <h3 class="item__title">Управление ассортиментом</h3>
+                        <h3 class="item__title item__title_hor item__title-visible">Управление ассортиментом</h3>
+                        <h3 class="item__title item__title_ver">Управление ассортиментом</h3>
                         <div class="mask">
                             <p class="mask__title">Анализ и оптимизация БП</p>
                             <ul class="mask__list">
@@ -100,7 +102,8 @@
                     </div>
                     <div class="item">
                         <img class="item__back" src="img/items/item4.jpg" alt="">
-                        <h3 class="item__title">ВЭД и Таможенное оформление</h3>
+                        <h3 class="item__title item__title_hor item__title-visible">ВЭД и Таможенное оформление</h3>
+                        <h3 class="item__title item__title_ver">ВЭД и Таможенное оформление</h3>
                         <div class="mask">
                             <p class="mask__title">Анализ и оптимизация БП</p>
                             <ul class="mask__list">
