--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                     <button class="button">Отправить заявку</button>
                 </div>
             </div>
-            <div class="main-screen__svg">
-                <img src="img/animate.png" alt="">
+            <div class="svg-animation">
+                <img src="img/main-screen-svg/map.svg" alt="">
             </div>
         </div>
         <div class="offer toScroll">
