--- a/index.html
+++ b/index.html
@@ -4172,18 +4172,18 @@
                         </g>
                     </svg>
                     <div id="items" class="svg-items">
-                        <img src="img/main-screen-svg/car.svg" alt="" class="svg-item svg-car">
-                        <img src="img/main-screen-svg/car2.svg" alt="" class="svg-item svg-car2">
-                        <img src="img/main-screen-svg/car3.svg" alt="" class="svg-item svg-car3">
-                        <img src="img/main-screen-svg/box.svg" alt="" class="svg-item svg-box">
-                        <img src="img/main-screen-svg/house.svg" alt="" class="svg-item svg-house">
-                        <img src="img/main-screen-svg/plane.svg" alt="" class="svg-item svg-plane">
-                        <img src="img/main-screen-svg/ship.svg" alt="" class="svg-item svg-ship">
-                        <img src="img/main-screen-svg/stand.svg" alt="" class="svg-item svg-stand">
-                        <img src="img/main-screen-svg/house2.svg" alt="" class="svg-item svg-house2">
-                        <img src="img/main-screen-svg/car4.svg" alt="" class="svg-item svg-car4">
-                        <img src="img/main-screen-svg/car5.svg" alt="" class="svg-item svg-car5">
-                        <img src="img/main-screen-svg/cart.svg" alt="" class="svg-item svg-cart">
+                        <img src="img/main-screen-svg/car.svg" alt="" class="svg-item svg-item1">
+                        <img src="img/main-screen-svg/car2.svg" alt="" class="svg-item svg-item2">
+                        <img src="img/main-screen-svg/car3.svg" alt="" class="svg-item svg-item3">
+                        <img src="img/main-screen-svg/box.svg" alt="" class="svg-item svg-item4">
+                        <img src="img/main-screen-svg/house.svg" alt="" class="svg-item svg-item5">
+                        <img src="img/main-screen-svg/plane.svg" alt="" class="svg-item svg-item6">
+                        <img src="img/main-screen-svg/ship.svg" alt="" class="svg-item svg-item7">
+                        <img src="img/main-screen-svg/stand.svg" alt="" class="svg-item svg-item8">
+                        <img src="img/main-screen-svg/house2.svg" alt="" class="svg-item svg-item9">
+                        <img src="img/main-screen-svg/car4.svg" alt="" class="svg-item svg-item10">
+                        <img src="img/main-screen-svg/car5.svg" alt="" class="svg-item svg-item11">
+                        <img src="img/main-screen-svg/cart.svg" alt="" class="svg-item svg-item12">
                     </div>
                 </div>
             </div>
