--- a/index.html
+++ b/index.html
@@ -4185,6 +4185,7 @@
                         <img src="img/main-screen-svg/car5.svg" alt="" class="svg-item svg-item11">
                         <img src="img/main-screen-svg/cart.svg" alt="" class="svg-item svg-item12">
                     </div>
+                    <svg id="svg-paths" class="svg-paths"></svg>
                 </div>
             </div>
         </div>
