--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Главная</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/jquery.min.js"></script>
@@ -39,15 +39,17 @@
 
 <div class="popup-thanks-bg popup-bg">
     <div class="popup-thanks popup">
-        <div class="popup-thanks__close popup-close">
-            <img src="img/cancel.svg" alt="">
+        <div class="popup-thanks__main">
+            <div class="popup-thanks__close popup-close">
+                <img src="img/cancel.svg" alt="">
+            </div>
+            <div class="popup-thanks__img">
+                <img src="img/check.png" alt="">
+            </div>
+            <div class="popup-thanks__title">Ваша заявка принята!</div>
+            <div class="popup-thanks__subtitle">Наши эксперты свяжутся с вами в ближайшее время</div>
+            <button class="button popup-thanks__close">Отлично!</button>
         </div>
-        <div class="popup-thanks__img">
-            <img src="img/check.png" alt="">
-        </div>
-        <div class="popup-thanks__title">Ваша заявка принята!</div>
-        <div class="popup-thanks__subtitle">Наши эксперты свяжутся с вами в ближайшее время</div>
-        <button class="button popup-thanks__close">Отлично!</button>
     </div>
 </div>    <div class="content">
         <div class="main-screen">
