--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Главная</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/all.min.css">
     <script src="js/jquery.min.js"></script>
 </head>
 <body>
@@ -4244,6 +4245,7 @@
                                 <li>- выявление проблемных + точек роста</li>
                                 <li>- оптимизация затрат и поиск наиболее оптимальных маршрутов</li>
                             </ul>
+                            <a href="#" class="button white-button mask__button">Узнать<span> подробнее</span></a>
                         </div>
                     </div>
                     <div class="item">
@@ -4259,6 +4261,7 @@
                                 <li>- выявление проблемных + точек роста</li>
                                 <li>- оптимизация затрат и поиск наиболее оптимальных маршрутов</li>
                             </ul>
+                            <a href="#" class="button white-button mask__button">Узнать<span> подробнее</span></a>
                         </div>
                     </div>
                     <div class="item">
@@ -4272,6 +4275,7 @@
                                 <li>- выявление проблемных + точек роста</li>
                                 <li>- оптимизация затрат и поиск наиболее оптимальных маршрутов</li>
                             </ul>
+                            <a href="#" class="button white-button mask__button">Узнать<span> подробнее</span></a>
                         </div>
                     </div>
                     <div class="item">
@@ -4285,10 +4289,11 @@
                                 <li>- выявление проблемных + точек роста</li>
                                 <li>- оптимизация затрат и поиск наиболее оптимальных маршрутов</li>
                             </ul>
+                            <a href="#" class="button white-button mask__button">Узнать<span> подробнее</span></a>
                         </div>
                     </div>
                 </div>
-                <div class="offer__navigation">
+                <!--<div class="offer__navigation">
                     <button class="offer__arrow offer__prev">
                         <svg xmlns="http://www.w3.org/2000/svg" width="39" height="26" viewBox="0 0 39 26" fill="none">
                             <path d="M0.238064 12.4256L12.4256 0.238056C12.743 -0.0793521 13.2571 -0.0793521 13.5745 0.238056C13.8919 0.555465 13.8919 1.06962 13.5745 1.38696L2.7739 12.1875H38.1875C38.6366 12.1875 39 12.5509 39 13C39 13.4492 38.6366 13.8126 38.1875 13.8126H2.7739L13.5745 24.6131C13.8919 24.9305 13.8919 25.4446 13.5745 25.762C13.4158 25.9206 13.2078 26 13 26C12.7921 26 12.5842 25.9206 12.4255 25.762L0.237988 13.5745C-0.0793457 13.2571 -0.0793457 12.743 0.238064 12.4256Z"
@@ -4301,7 +4306,7 @@
                                   fill="#ADADAD"/>
                         </svg>
                     </button>
-                </div>
+                </div>-->
             </div>
         </div>
         <div class="advantages">
@@ -4332,7 +4337,7 @@
                         </div>
                     </div>
                 </div>
-                <button class="advantages__button button white-button popup-callback-open-btn">Отправить заявку</button>
+                <button class="button white-button popup-callback-open-btn">Отправить заявку</button>
             </div>
         </div>
         <div class="about specialScroll">
@@ -4385,8 +4390,13 @@
     </div>
 <footer class="footer">
     <div class="container">
-        <div class="footer__row">
-
+        <div class="footer__column">
+            <p class="footer__content">Адрес: индекс&nbsp;123022, г.&nbsp;Москва, ул.&nbsp;Рочдельская, д.&nbsp;15, стр.&nbsp;16, помещение&nbsp;I, офис&nbsp;1</p>
+            <p class="footer__content">GFC в социальных сетях</p>
+            <div class="footer__links">
+                <a href="#" class="button white-button link"><i class="fab fa-instagram"></i></a>
+                <a href="#" class="button white-button link"><i class="fab fa-facebook-f"></i></a>
+            </div>
         </div>
     </div>
 </footer></main>
