--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 </header>            <div class="container">
                 <div class="main-screen__main">
                     <h1 class="main-screen__title">4PL&nbsp;логистика</h1>
-                    <p class="main-screen__content">Вы&nbsp;строите бизнес. Мы&nbsp;сделаем все остальное</p>
+                    <p class="main-screen__content">Вы&nbsp;строите&nbsp;бизнес. Мы&nbsp;сделаем&nbsp;все&nbsp;остальное</p>
                     <button class="button popup-callback-open-btn">Отправить заявку</button>
                 </div>
             </div>
