--- a/index.html
+++ b/index.html
@@ -52,10 +52,20 @@
         <button class="button popup-thanks__close">Отлично!</button>
     </div>
 </div>    <div class="content">
-        <div class="main-screen">
 <header class="header">
     <div class="header__row">
-        <div class="header__logo"><a href="index.html"><img src="img/logo.svg" alt=""></a></div>
+        <div class="header__logo">
+            <a href="index.html">
+                <svg width="99" height="60" viewBox="0 0 99 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M32.2686 1.37326C31.5308 3.83244 30.8413 6.19565 30.1156 8.60685C29.4141 8.48689 28.7005 8.28295 27.9748 8.23497C26.3298 8.12701 24.6607 7.97106 23.0036 8.04303C20.3064 8.17499 17.7905 9.02671 15.6255 10.6582C12.638 12.9374 11.126 15.9004 11.5131 19.7271C11.9485 24.1537 15.6376 28.7721 20.512 29.8997C22.3505 30.3196 24.2252 30.1757 26.1484 30.0197C26.1484 27.7765 26.1484 25.5812 26.1484 23.3379C24.4913 23.206 22.8706 23.074 21.1893 22.9421C21.1893 21.2386 21.1893 19.5712 21.1893 17.8318C26.0274 17.8318 30.8534 17.8318 35.7399 17.8318C35.752 18.0957 35.7883 18.3476 35.7883 18.5875C35.8004 22.5822 35.7883 26.6008 35.8125 30.5955C35.8125 31.1713 35.619 31.4952 35.111 31.7591C32.1476 33.2946 29.0875 34.5302 25.8097 35.214C24.9509 35.3939 24.068 35.5499 23.1971 35.5499C20.9474 35.5259 18.6977 35.5379 16.4722 35.274C14.3071 35.022 12.2509 34.3263 10.2794 33.3066C8.04174 32.155 6.19117 30.5955 4.64297 28.6882C2.68354 26.277 1.41353 23.5299 0.990199 20.4349C0.337054 15.5285 2.09087 11.4379 5.36869 7.88709C8.50137 4.49222 12.4565 2.4409 16.9197 1.34927C20.8385 0.389586 24.8179 0.329606 28.8093 0.941402C29.9221 1.08535 31.0591 1.21731 32.2686 1.37326Z" fill="white"/>
+                    <path d="M98.2361 1.45717C97.4982 3.83238 96.8088 6.03964 96.1194 8.24691C95.9984 8.64278 95.7202 8.67877 95.3816 8.5828C93.2891 8.04298 91.1482 7.85104 89.0074 8.03098C84.387 8.42685 80.6011 10.2862 78.2909 14.4848C77.3838 16.1283 77.2387 17.9397 77.408 19.7751C77.7708 23.8537 81.1696 28.6401 86.2013 29.8037C87.8825 30.1876 89.7089 30.0797 91.4627 30.0317C92.7448 29.9957 94.039 29.6958 95.3211 29.5038C95.8412 29.4199 96.2041 29.5278 96.3734 30.1036C96.6274 30.9793 96.9298 31.8551 97.2201 32.7188C97.3652 33.1386 97.2322 33.3905 96.833 33.5585C94.1479 34.6981 91.3901 35.5858 88.4389 35.5498C86.3585 35.5258 84.266 35.5378 82.2219 35.2499C77.8555 34.6381 74.1302 32.7188 71.1668 29.4079C68.8566 26.8167 67.3568 23.8537 66.8851 20.4469C66.4013 16.92 67.127 13.5611 69.0985 10.5262C72.0256 5.99166 76.271 3.24457 81.3631 1.6731C85.4997 0.401519 89.7331 0.365531 93.9785 0.761399C95.3816 0.893355 96.7483 1.20525 98.2361 1.45717Z" fill="white"/>
+                    <path d="M66.1109 0.581495C65.8086 1.58916 65.5546 2.48886 65.2885 3.37656C64.9135 4.61215 64.4781 5.83574 64.1757 7.08333C64.0064 7.7791 63.6677 7.98303 63.0025 7.98303C59.9786 7.97103 56.9427 7.97103 53.9189 7.97103C53.3988 7.97103 52.8908 7.97103 52.3102 7.97103C52.3102 11.2819 52.3102 14.4729 52.3102 17.7238C52.6005 17.7358 52.8424 17.7598 53.0843 17.7718C55.1405 17.7718 57.2088 17.7718 59.265 17.7838C60.4383 17.7838 60.656 18.0957 60.3294 19.1993C59.9786 20.3269 59.6279 21.4785 59.3134 22.6182C59.1683 23.17 58.8538 23.3379 58.3095 23.3259C56.592 23.3139 54.8623 23.3139 53.1327 23.3139C52.8908 23.3139 52.6368 23.3139 52.2739 23.3139C52.2739 27.4645 52.2739 31.5552 52.2739 35.6938C51.9474 35.7178 51.7176 35.7658 51.4999 35.7658C48.597 35.7658 45.6941 35.7778 42.7913 35.7658C41.7511 35.7658 41.6543 35.6578 41.6543 34.6022C41.6664 23.9017 41.6906 13.2133 41.7148 2.51285C41.7148 1.36123 42.4405 0.59349 43.6137 0.53351C44.4241 0.497522 45.2587 0.509518 46.0812 0.509518C52.4554 0.521514 58.8296 0.521514 65.2038 0.53351C65.4578 0.521514 65.7118 0.545506 66.1109 0.581495Z" fill="white"/>
+                    <path d="M34.3687 48.0984C33.8032 48.8318 33.2015 49.6299 32.5635 50.4927C31.9255 51.3556 31.3891 52.24 30.9541 53.1459H34.3687V48.0984ZM37.544 44.1726V53.1459H39.1535V55.7775H37.544V59.121H34.3687V55.7775H27.8657V53.4263C28.1847 52.7936 28.5834 52.0818 29.0619 51.2908C29.5404 50.4855 30.0696 49.6659 30.6496 48.8318C31.2441 47.9834 31.8675 47.1565 32.52 46.3512C33.1725 45.5459 33.825 44.8197 34.4774 44.1726H37.544Z" fill="white"/>
+                    <path d="M46.0557 44C48.3031 44 50.0286 44.3955 51.232 45.1864C52.4355 45.9629 53.0372 47.2428 53.0372 49.0259C53.0372 50.8235 52.4282 52.1249 51.2103 52.9302C49.9923 53.7211 48.2524 54.1166 45.9905 54.1166H44.9248V59.121H41.5319V44.3883C42.2714 44.2445 43.0544 44.1438 43.8808 44.0863C44.7073 44.0288 45.4323 44 46.0557 44ZM46.2732 46.8689C46.0267 46.8689 45.7803 46.8761 45.5338 46.8905C45.3018 46.9048 45.0988 46.9192 44.9248 46.9336V51.2477H45.9905C47.1649 51.2477 48.0494 51.0895 48.6439 50.7732C49.2383 50.4568 49.5356 49.8672 49.5356 49.0044C49.5356 48.5873 49.4558 48.2422 49.2963 47.969C49.1514 47.6958 48.9339 47.48 48.6439 47.3219C48.3684 47.1493 48.0277 47.0343 47.6217 46.9767C47.2157 46.9048 46.7662 46.8689 46.2732 46.8689Z" fill="white"/>
+                    <path d="M65.5984 56.2305V59.121H55.5286V44.1726H58.9215V56.2305H65.5984Z" fill="white"/>
+                </svg>
+            </a>
+        </div>
         <nav class="header__menu">
             <ul>
                 <li><a href="#">Предложение бизнесу</a></li>
@@ -88,16 +98,19 @@
             </div>
         </div>
     </div>
-</header>            <div class="container">
+</header>        <div class="main-screen header-to-dark-gradient">
+            <div class="container">
                 <div class="main-screen__main">
                     <h1 class="main-screen__title">4PL&nbsp;логистика</h1>
-                    <p class="main-screen__content">Вы&nbsp;строите&nbsp;бизнес. Мы&nbsp;сделаем&nbsp;все&nbsp;остальное</p>
+                    <p class="main-screen__content">Вы&nbsp;строите&nbsp;бизнес.
+                        Мы&nbsp;сделаем&nbsp;все&nbsp;остальное</p>
                     <button class="button popup-callback-open-btn">Отправить заявку</button>
                 </div>
             </div>
             <div id="svg" class="svg-animation">
                 <div id="map" class="svg-map">
-                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 500 500" style="enable-background:new 0 0 500 500;" xml:space="preserve">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                         viewBox="0 0 500 500" style="enable-background:new 0 0 500 500;" xml:space="preserve">
                         <style type="text/css">
                             .map {
                                 opacity: 0.46;
@@ -3382,7 +3395,7 @@
                             <g>
                             <path class="st2" d="M167.3,204.6c-0.1,0-0.1,0-0.3,0l-1.4-0.8c-0.1-0.1-0.3-0.4-0.1-0.5c0.1-0.1,0.4-0.3,0.5-0.1l1.4,0.8
                                 c0.1,0.1,0.3,0.4,0.1,0.5C167.6,204.6,167.4,204.6,167.3,204.6z"/>
-                            <path class="st2" d="M215.4,232.4c-0.1,0-0.1,0-0.3,0l-2.6-1.5c-0.1-0.1-0.3-0.4-0.1-0.5c0.1-0.1,0.4-0.3,0.5-0.1l2.6,1.5
+                                <path class="st2" d="M215.4,232.4c-0.1,0-0.1,0-0.3,0l-2.6-1.5c-0.1-0.1-0.3-0.4-0.1-0.5c0.1-0.1,0.4-0.3,0.5-0.1l2.6,1.5
                                 c0.1,0.1,0.3,0.4,0.1,0.5C215.7,232.4,215.5,232.4,215.4,232.4z M211,229.8c-0.1,0-0.1,0-0.3,0l-2.6-1.5c-0.1-0.1-0.3-0.4-0.1-0.5
                                 c0.1-0.1,0.4-0.3,0.5-0.1l2.6,1.5c0.1,0.1,0.3,0.4,0.1,0.5C211.3,229.8,211.2,229.8,211,229.8z M206.7,227.4c-0.1,0-0.1,0-0.3,0
                                 l-2.6-1.5c-0.1-0.1-0.3-0.4-0.1-0.5c0.1-0.1,0.4-0.3,0.5-0.1l2.6,1.5c0.1,0.1,0.3,0.4,0.1,0.5
@@ -3399,7 +3412,7 @@
                                 c0.1-0.1,0.4-0.3,0.5-0.1l2.6,1.5c0.1,0.1,0.3,0.4,0.1,0.5C176.3,209.6,176.2,209.8,176.1,209.8z M171.7,207.2c-0.1,0-0.1,0-0.3,0
                                 l-2.6-1.5c-0.1-0.1-0.3-0.4-0.1-0.5c0.1-0.1,0.4-0.3,0.5-0.1l2.6,1.5c0.1,0.1,0.3,0.4,0.1,0.5
                                 C171.9,207.1,171.8,207.2,171.7,207.2z"/>
-                            <path class="st2" d="M218.5,234.2c-0.1,0-0.1,0-0.3,0l-1.4-0.8c-0.1-0.1-0.3-0.4-0.1-0.5c0.1-0.1,0.4-0.3,0.5-0.1l1.4,0.8
+                                <path class="st2" d="M218.5,234.2c-0.1,0-0.1,0-0.3,0l-1.4-0.8c-0.1-0.1-0.3-0.4-0.1-0.5c0.1-0.1,0.4-0.3,0.5-0.1l1.4,0.8
                                 c0.1,0.1,0.3,0.4,0.1,0.5C218.8,234.1,218.6,234.2,218.5,234.2z"/>
                         </g>
                             <g>
@@ -4239,13 +4252,15 @@
                         <h3 class="item__title item__title_hor item__title-visible">Анализ и оптимизация БП</h3>
                         <h3 class="item__title item__title_ver">Анализ и оптимизация БП</h3>
                         <div class="mask">
-                            <p class="mask__title">Анализ и оптимизация БП</p>
-                            <ul class="mask__list">
-                                <li>- анализ</li>
-                                <li>- выявление проблемных + точек роста</li>
-                                <li>- оптимизация затрат и поиск наиболее оптимальных маршрутов</li>
-                            </ul>
-                            <a href="#" class="button white-button mask__button">Узнать<span> подробнее</span></a>
+                            <div class="mask__main">
+                                <p class="mask__title">Анализ и оптимизация БП</p>
+                                <ul class="mask__list">
+                                    <li>- анализ</li>
+                                    <li>- выявление проблемных + точек роста</li>
+                                    <li>- оптимизация затрат и поиск наиболее оптимальных маршрутов</li>
+                                </ul>
+                                <a href="#" class="button white-button mask__button">Узнать<span> подробнее</span></a>
+                            </div>
                         </div>
                     </div>
                     <div class="item">
@@ -4255,13 +4270,21 @@
                         <h3 class="item__title item__title_ver">Управление магистральной и&nbsp;локальной
                             логистикой</h3>
                         <div class="mask">
-                            <p class="mask__title">Анализ и оптимизация БП</p>
-                            <ul class="mask__list">
-                                <li>- анализ</li>
-                                <li>- выявление проблемных + точек роста</li>
-                                <li>- оптимизация затрат и поиск наиболее оптимальных маршрутов</li>
-                            </ul>
-                            <a href="#" class="button white-button mask__button">Узнать<span> подробнее</span></a>
+                            <div class="mask__main">
+                                <p class="mask__title">Управление магистральной и локальной логистикой</p>
+                                <ul class="mask__list">
+                                    <li>- оптимизация построения маршрутов доставки с помощью программы-маршрутизатора
+                                    </li>
+                                    <li>- мобильное приложение водителя, которое передает в учетную систему клиента
+                                        статус заказа и плановое время доставки
+                                    </li>
+                                    <li>- контроль и мониторинг соблюдения температурной цепочки (режим и условия)
+                                        -подбор оптимального тарифа по направлению на основе глубокого анализа данных
+                                        рынка
+                                    </li>
+                                </ul>
+                                <a href="#" class="button white-button mask__button">Узнать<span> подробнее</span></a>
+                            </div>
                         </div>
                     </div>
                     <div class="item">
@@ -4269,13 +4292,17 @@
                         <h3 class="item__title item__title_hor item__title-visible">Управление ассортиментом</h3>
                         <h3 class="item__title item__title_ver">Управление ассортиментом</h3>
                         <div class="mask">
-                            <p class="mask__title">Анализ и оптимизация БП</p>
-                            <ul class="mask__list">
-                                <li>- анализ</li>
-                                <li>- выявление проблемных + точек роста</li>
-                                <li>- оптимизация затрат и поиск наиболее оптимальных маршрутов</li>
-                            </ul>
-                            <a href="#" class="button white-button mask__button">Узнать<span> подробнее</span></a>
+                            <div class="mask__main">
+                                <p class="mask__title">Управление ассортиментом</p>
+                                <ul class="mask__list">
+                                    <li>- Прогнозирование продаж «сети» на основании прошлых периодов + Data Driven
+                                        Approach/DMPплатформы
+                                    </li>
+                                    <li>- Контроль OUT-OF-STOCK позиций на складе</li>
+                                    <li>- Автоматизация заказов</li>
+                                </ul>
+                                <a href="#" class="button white-button mask__button">Узнать<span> подробнее</span></a>
+                            </div>
                         </div>
                     </div>
                     <div class="item">
@@ -4283,13 +4310,15 @@
                         <h3 class="item__title item__title_hor item__title-visible">ВЭД и Таможенное оформление</h3>
                         <h3 class="item__title item__title_ver">ВЭД и Таможенное оформление</h3>
                         <div class="mask">
-                            <p class="mask__title">Анализ и оптимизация БП</p>
-                            <ul class="mask__list">
-                                <li>- анализ</li>
-                                <li>- выявление проблемных + точек роста</li>
-                                <li>- оптимизация затрат и поиск наиболее оптимальных маршрутов</li>
-                            </ul>
-                            <a href="#" class="button white-button mask__button">Узнать<span> подробнее</span></a>
+                            <div class="mask__main">
+                                <p class="mask__title">ВЭД и Таможенное оформление</p>
+                                <ul class="mask__list">
+                                    <li>- анализ</li>
+                                    <li>- выявление проблемных + точек роста</li>
+                                    <li>- оптимизация затрат и поиск наиболее оптимальных маршрутов</li>
+                                </ul>
+                                <a href="#" class="button white-button mask__button">Узнать<span> подробнее</span></a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -4309,7 +4338,7 @@
                 </div>-->
             </div>
         </div>
-        <div class="advantages">
+        <div class="advantages header-to-light-gradient">
             <div class="advantages__main toScroll container">
                 <h2 class="title">Какую выгоду получает клиент и на чем он экономит</h2>
                 <div class="advantages__items">
@@ -4390,8 +4419,9 @@
     </div>
 <footer class="footer">
     <div class="container">
-        <div class="footer__column">
-            <p class="footer__content">Адрес: индекс&nbsp;123022, г.&nbsp;Москва, ул.&nbsp;Рочдельская, д.&nbsp;15, стр.&nbsp;16, помещение&nbsp;I, офис&nbsp;1</p>
+        <div class="footer__column toScroll">
+            <p class="footer__title">GFC-russia.ru</p>
+            <p class="footer__content"><span>Адрес:</span> индекс&nbsp;123022, г.&nbsp;Москва, ул.&nbsp;Рочдельская, д.&nbsp;15, стр.&nbsp;16, помещение&nbsp;I, офис&nbsp;1</p>
             <p class="footer__content">GFC в социальных сетях</p>
             <div class="footer__links">
                 <a href="#" class="button white-button link"><i class="fab fa-instagram"></i></a>
