--- a/index.html
+++ b/index.html
@@ -4403,8 +4403,7 @@
         <div class="partners container">
             <div class="partners__main toScroll">
                 <h2 class="title">Наши партнеры</h2>
-                <p class="partners__content">We focus on ergonomics and meeting you where you work. It's only a
-                    keystroke away.</p>
+                <p class="partners__content">Convallis turpis erat tempus, viverra aliquet. Nullam viverra nam auctor sit ipsum malesuada a, duis volutpat.</p>
                 <div class="partners__icons">
                     <img src="img/partners/logo_apple-app-store.svg" alt="apple-app-store">
                     <img src="img/partners/logo_apiary.svg" alt="apiary">
